# ailogparse

./: Cargo.toml
src/: main.rs  ollama.rs
