[package]
name = "ailogparse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util"] }
ollama-rs = { version = "0.2.1", features = ["chat-history", "tokio-stream", "stream"] }
tokio-stream = "0.1.16"
anyhow = "1.0.93"
thiserror = "2.0.3"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }